Commented out local key file

--- a/ssh/ssh.cfg
+++ b/ssh/ssh.cfg
@@ -1,5 +1,5 @@
 Host *
-  IdentityFile /Users/tok/.ssh/125akey.pem
+#  IdentityFile /Users/tok/.ssh/125akey.pem
   ForwardAgent yes
   User ec2-user
   ControlMaster auto
